--- a/task2_report.ipynb
+++ b/task2_report.ipynb
@@ -575,6 +575,9 @@
    "id": "42f50c5c",
    "metadata": {},
    "source": [
+    "Looking at the graph we can spot that the average best fitness over many generations converged towards the average optimal solution. It also got quite close to it. One could argue that it would get even more close to it with different parameter values  like number of generatins, number of parents mating and population size which we set to low values for the quickness of computation.\n",
+    "\n",
+    "\n",
     "We also remarked the number of optimal path calculations. In this testing it was 6. Which means our genetic algorithm found the optimal path through target nodes in 6 cases. "
    ]
   }
